--- a/main1.ui
+++ b/main1.ui
@@ -66,9 +66,9 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>170</y>
-     <width>98</width>
+     <x>110</x>
+     <y>175</y>
+     <width>94</width>
      <height>27</height>
     </rect>
    </property>
@@ -79,9 +79,9 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>140</y>
-     <width>98</width>
+     <x>110</x>
+     <y>145</y>
+     <width>94</width>
      <height>27</height>
     </rect>
    </property>
@@ -92,8 +92,8 @@
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>170</y>
+     <x>210</x>
+     <y>175</y>
      <width>98</width>
      <height>27</height>
     </rect>
@@ -150,8 +150,8 @@
   <widget class="QPushButton" name="pushButton_4">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>140</y>
+     <x>210</x>
+     <y>145</y>
      <width>99</width>
      <height>27</height>
     </rect>
@@ -184,6 +184,32 @@
    </property>
    <property name="text">
     <string>Remember Users</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_5">
+   <property name="geometry">
+    <rect>
+     <x>5</x>
+     <y>145</y>
+     <width>98</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Previous</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_6">
+   <property name="geometry">
+    <rect>
+     <x>5</x>
+     <y>175</y>
+     <width>98</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Next</string>
    </property>
   </widget>
  </widget>
